@@ -26,6 +26,7 @@ t/Error-Pure-HTTP-JSON-Advance/00-use.t
 t/Error-Pure-HTTP-JSON-Advance/01-version.t
 t/Error-Pure-HTTP-JSON-Advance/02-pod_coverage.t
 t/Error-Pure-HTTP-JSON-Advance/03-pod.t
+t/Error-Pure-HTTP-JSON-Advance/04-err.t
 t/Error-Pure-HTTP-JSON/00-use.t
 t/Error-Pure-HTTP-JSON/01-version.t
 t/Error-Pure-HTTP-JSON/02-pod_coverage.t
